--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,7 +38,7 @@ html, body {
   width:20%;
   display:inline-block;
   padding: 5%;
-  background: rgba(0,0,0,0.3);
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 50%;
   border: 1px solid rgb(255, 255, 255);  
 }
